--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "start": "echo Please use 'npm run dev'...",
     "build": "tsc",
-    "dev": "ts-node src/index.ts",
+    "dev": "ts-node src/cli.ts",
     "clean": "rm -rf dist",
     "prepublishOnly": "npm run clean && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -24,8 +25,12 @@
     "dist"
   ],
   "devDependencies": {
+    "@types/commander": "^2.12.0",
     "@types/node": "^22.10.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
+  },
+  "dependencies": {
+    "commander": "^14.0.2"
   }
 }
