--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,26 +2,48 @@
   "compilerOptions": {
     /* Language and Environment */
     "target": "ES2020",
-    "lib": ["ES2020"],
-    
+    "lib": [
+      "ES2020"
+    ],
     /* Modules */
     "module": "commonjs",
     "rootDir": "./src",
+    "baseUrl": "./src",
+    "paths": {
+      "@Character/*": [
+        "Character/*"
+      ],
+      "@NPCs/*": [
+        "NPCs/*"
+      ],
+      "@Enemy/*": [
+        "Enemy/*"
+      ],
+      "@Combat/*": [
+        "Combat/*"
+      ],
+      "@Equipment/*": [
+        "Equipment/*"
+      ],
+      "@Skills/*": [
+        "Skills/*"
+      ],
+      "@Effects/*": [
+        "Effects/*"
+      ]
+    },
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    
     /* Emit */
     "outDir": "./dist",
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
     "removeComments": true,
-    
     /* Interop Constraints */
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "allowSyntheticDefaultImports": true,
-    
     /* Type Checking */
     "strict": true,
     "noUnusedLocals": true,
@@ -30,6 +52,11 @@
     "noFallthroughCasesInSwitch": true,
     "skipLibCheck": true
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
