--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "start": "echo Please use 'npm run dev'...",
-    "build": "tsc",
-    "dev": "ts-node src/cli.ts",
+    "build": "tsc && tsc-alias",
+    "dev": "ts-node -r tsconfig-paths/register src/cli.ts",
     "clean": "rm -rf dist",
     "prepublishOnly": "npm run clean && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -25,10 +25,16 @@
     "dist"
   ],
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
     "@types/commander": "^2.12.0",
     "@types/node": "^22.10.2",
+    "eslint": "^9.39.1",
+    "globals": "^16.5.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.2"
+    "tsc-alias": "^1.8.16",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.47.0"
   },
   "dependencies": {
     "commander": "^14.0.2"
