--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,11 +24,12 @@
     "allowSyntheticDefaultImports": true,
     /* Type Checking */
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "noImplicitAny": true
   },
   "include": [
     "src/**/*"
