--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,9 @@
     "skipLibCheck": true,
     "noImplicitAny": true
   },
+  "ts-node": {
+    "require": ["tsconfig-paths/register"]
+  },
   "include": [
     "src/**/*"
   ],
